--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,8 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: "echo Hello, World!"
+          #command: "echo Hello, World-111! "
+          command: "lua lua2c.lua test/bisect.lua "
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -24,3 +25,4 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+      
